# inspari-logging

./: CHANGELOG.md  README.md  azure-pipeline-publish.yml  azure-pipeline-test.yml  example.env  example_logging_config.json  example_usage.py  pyproject.toml
inspari/logging/: __init__.py  configuration.py  streamlogs.py
tests/: test_configuration.py
tests/resources/: logging_config.json
