[tool.poetry]
name = "inspari_logging"
version = "0.1.0"
description = "Inspari logging utilities"
authors = ["emilhe <emil.h.eriksen@gmail.com>"]
readme = "README.md"
packages = [
    { include = "inspari" }
]

[tool.poetry.dependencies]
python = "^3.13"
python-json-logger = { git = "https://github.com/nhairs/python-json-logger.git", tag = "v3.1.0" }
colorama = "^0.4.6"
pydantic = "^2.10.1"
typer = "^0.13.1"
azure-storage-blob = {version="^12.24.0", optional= true}
azure-identity = {version="^1.19.0", optional= true} 

[tool.poetry.extras]
azure = ["azure-storage-blob", "azure-identity"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
